--- a/app/src/main/res/layout/activity_locations_menu.xml
+++ b/app/src/main/res/layout/activity_locations_menu.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".NewActivity">
+    tools:context=".LocationsMenuActivity">
 
     <TextView
         android:id="@+id/welcomeText"
@@ -13,15 +13,34 @@
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:gravity="center"
-        android:text="Welcome to NewActivity"
+        android:text="@string/Locations_welcome"
         android:textColor="@color/black"
-        android:textSize="28sp" />
+        android:textSize="28sp"
+        android:translationY="-170.dp" />
 
     <Button
         android:id="@+id/backButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Back"
+        android:text="@string/Back"
+        android:textSize="24sp"
+        android:translationX="-120.dp"
+        android:translationY="-320.dp" />
+
+    <Button
+        android:id="@+id/AddLocationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Add"
         android:textSize="24sp" />
+
+    <Button
+        android:id="@+id/ViewLocationsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/View"
+        android:textSize="24sp" />
+
+
 </androidx.appcompat.widget.LinearLayoutCompat>
 
