--- a/app/src/main/res/layout/activity_add_location.xml
+++ b/app/src/main/res/layout/activity_add_location.xml
@@ -16,7 +16,7 @@
         android:text="@string/Back"
         android:textSize="24sp"
         android:translationX="-120.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-120.dp" />
 
     <EditText
         android:id="@+id/editTextText2"
@@ -26,7 +26,7 @@
         android:inputType="text"
         android:text="LocationName"
         android:translationX="-50.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-110.dp" />
 
     <EditText
         android:id="@+id/editTextText3"
@@ -35,8 +35,8 @@
         android:ems="15"
         android:inputType="text"
         android:text="Address"
-        android:translationX="0.dp"
-        android:translationY="-140.dp" />
+        android:translationX="3.dp"
+        android:translationY="-90.dp" />
 
     <EditText
         android:id="@+id/editTextNumberDecimal"
@@ -46,13 +46,13 @@
         android:inputType="numberDecimal"
         android:text="MaxAttendees"
         android:translationX="-50.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-60.dp" />
 
     <RadioGroup
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:translationX="-50.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-30dp" />
 
     <RadioButton
         android:id="@+id/radio_birthday"
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:text="BirthDay"
         android:translationX="-100.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-30dp" />
 
     <RadioButton
         android:id="@+id/radio_concert"
@@ -68,7 +68,7 @@
         android:layout_height="wrap_content"
         android:text="Concert"
         android:translationX="-101.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-30dp" />
 
     <RadioButton
         android:id="@+id/radio_party"
@@ -76,7 +76,7 @@
         android:layout_height="wrap_content"
         android:text="Party"
         android:translationX="-110.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-30dp" />
 
     <EditText
         android:id="@+id/editTextNumberDecimal3"
@@ -86,7 +86,7 @@
         android:inputType="numberDecimal"
         android:text="Hours"
         android:translationX="-100.dp"
-        android:translationY="-140.dp" />
+        android:translationY="-30dp" />
 
     <EditText
         android:id="@+id/editTextNumberDecimal5"
@@ -96,7 +96,15 @@
         android:inputType="numberDecimal"
         android:text="Days"
         android:translationX="75dp"
-        android:translationY="-185.dp" />
+        android:translationY="-75dp" />
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/Submit"
+        android:textSize="24sp"
+        />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
