--- a/app/src/main/res/layout/activity_locations_menu.xml
+++ b/app/src/main/res/layout/activity_locations_menu.xml
@@ -32,14 +32,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/Add"
-        android:textSize="24sp" />
-
-    <Button
-        android:id="@+id/ViewLocationsButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/View"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:translationX="120.dp"
+        android:translationY="-370.dp" />
 
 
 </androidx.appcompat.widget.LinearLayoutCompat>
